<resources>
    <string name="app_name">ResourceExample</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
</resources>